# ScreenshotCompare

./: .gitignore  CMakeLists.txt  README.md
docs/: Design.puml
src/: CMakeLists.txt  database_module.cpp  database_module.hpp  image_comparison_module.cpp  image_comparison_module.hpp  mainwindow.cpp  mainwindow.hpp  screenshot_service.cpp  screenshot_service.hpp
tests/: CMakeLists.txt  test_database_module.cpp  test_image_comparison_module.cpp  test_mainwindow.cpp  test_screenshot_service.cpp
